tests/miniJava/neg/000079_mutation.MiniJava
class java { 0 public static void Main ( String [ ] java ) { { } } }
